<resources>
    <string name="app_name">TOYOTA</string>

    <string name="action_settings">Settings</string>
    <string name="Slogan">LEAD THE WAY</string>
    <string name="Logo">Logo</string>
    <string name="Toyota">ToyotaLogo</string>
    <string name="ToyotaMenu">TOYOTA MENU</string>
    <string name="CusPromo">PROMOTIONS</string>
    <string name="CusCamp">CAMPAIGNS</string>
    <string name="Cust">CUSTOMERS</string>
    <string name="AboutToyota">ABOUT US</string>
    <string name="ContactToyota">CONTACT US</string>
    <string name="Dealership">DEALERSHIP</string>
    <string name="Help">HELP</string>
    <string name="OrderPartss">ORDER</string>
    <string name="AdministratorPage">ADMINISTRATOR</string>
    <string name="ImgAbout">About Toyota</string>
    <string name="ToyotaBooking">Booking Image</string>
    <string name="BookService">BOOK SERVICES</string>
    <string name="BookRepair">BOOK REPAIRS</string>
    <string name="OrderParts">ORDER PARTS</string>
    <string name="VehicleDetails">Vehicle Details</string>
    <string name="VModel">Vehicle Model</string>
    <string name="VINNumber">VIN Number</string>
    <string name="Mileage">Mileage(KM)</string>
    <string name="PersonalDetails">Personal Details</string>
    <string name="Name">Names</string>
    <string name="Surname">Surname</string>
    <string name="Telephone">Telephone</string>
    <string name="SEND">SEND</string>
    <string name="PostPromo">Post Promotions</string>
    <string name="Vehicle_Model">Vehicle Model</string>
    <string name="Promo_Amount">Promotion Amount</string>
    <string name="Promo_End_Date">Promotion End Date</string>
    <string name="Promo_Type">Promotion Type</string>
    <string name="POST">POST</string>
    <string name="PostCamp">Post Campaigns</string>
    <string name="LimpopoToyota">Limpopo Toyota</string>
    <string name="CONTACT">CONTACT</string>
    <string name="Address">Address</string>
    <string name="Postal_Address">Postal Address</string>
    <string name="AddContact">Add Contacts</string>
    <string name="Camp_Amount">Campaign Amount</string>
    <string name="Camp_End_Date">Campaign End Date</string>
    <string name="Camp_Type">Campaign Type</string>
    <string name="CustomerRequest">Customer Request</string>
    <string name="MyCustomer">MY CUSTOMER</string>
    <string name="BooksAndOrder">Bookings and Orders</string>
    <string name="Services">SERVICES</string>
    <string name="RepairsWhat">REPAIRS</string>
    <string name="RRepair">Repairs</string>
    <string name="Orders">ORDERS</string>
    <string name="LogOut">LOGOUT</string>
    <string name="LOADINGPLEASEWAIT">LOADING PLEASE WAIT</string>
    <string name="DDMMYEAR">DD-MM-YEAR</string>
    <string name="ToyotaLogo">Toyota Logo</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="ForgotPassWord">Forgot Password</string>
    <string name="SecretCode">Secret Code</string>
    <string name="ViewPassword">View Password</string>
    <string name="UserSite">User Site</string>
    <string name="BACK">BACK</string>
    <string name="ServiceDate">Service Date</string>
    <string name="CarParts">Order Car Parts</string>
    <string name="PartsEnquiry">Order Parts</string>
    <string name="FirstName">First Name</string>
    <string name="Mobile">Mobile</string>
    <string name="VIN">VIN Number</string>
    <string name="Order">Part(s) Name(s)</string>
    <string name="CollectDate">Collection Date</string>
    <string name="PartRepair">What do you want to repair</string>
    <string name="RepairDate">Repair Date</string>
    <string name="Call">CALL</string>
    <string name="Sms">SMS</string>
    <string name="mail">EMAIL</string>
    <string name="Respond">Respond Customer Via</string>
    <string name="BackAdmin">Admin Page</string>
    <string name="Type">Type a number to call</string>
    <string name="CCall">Call</string>
    <string name="DialandCall">Dial and Call</string>
    <string name="PhoneNumber">Enter Phone Number</string>
    <string name="Message">Enter Your Message</string>
    <string name="MMessage">Compose email</string>
    <string name="AttemptsLeft">Attempts Left:</string>
    <string name="NewText">new</string>
    <string name="Cancel">Cancel</string>
    <string name="UUUsername">Username</string>
    <string name="UUsername">GROUP07</string>
    <string name="PPPassword">Password</string>
    <string name="PPassword">2016</string>
    <string name="Adminn">ADMIN CREDENTIALS</string>
    <string name="AdminPage">ADMIN LOGIN PAGE</string>
    <string name="To">To</string>
    <string name="cc">cc</string>
    <string name="Subject">Subject</string>
    <string name="SendEMail">Send E-Mail</string>
    <string name="LOGO">LOGO</string>
    <string name="underconstruction">Under Construction</string>
    <string name="Back">HOME</string>
    <string name="ContactUsDetails">Contact Us</string>
    <string name="WorkingHours">WORKING HOURS</string>
    <string name="OnlineWorkingHours">ONLINE WORKING HOURS</string>
    <string name="Instructions">GET INSTRUCTIONS</string>
    <string name="Home">HOME</string>
    <string name="Developers">Contact Developers</string>
    <string name="Creator">2016 Toyota Mobile App Created By Group07</string>
    <string name="AddContacts">Add Contacts</string>
    <string name="CustomerRequests">Customer Requests</string>
    <string name="CustomerResponse">Customer Response</string>
    <string name="Logout">Logout</string>
    <string name="Helpp">LIMPOPO TOYOTA CUSTOMER HELP</string>
    <string name="Fixed">View Fixed Instruction</string>
    <string name="PromoType">Promotion Type</string>
    <string name="PromoDesc">Promotion Descsription</string>
    <string name="VehicleModel">Vehicle Model</string>
    <string name="PromoAmount">Promotion Amount</string>
    <string name="PromoEndDate">Promotion End Date</string>
    <string name="PostPromotions">Post Promotions</string>
    <string name="CampType">Campaign Type</string>
    <string name="CampDesc">Campaign Description</string>
    <string name="CampAmount">Campaign Amount</string>
    <string name="CampEndDate">Campaign End Date</string>
    <string name="PostCampaigns">Post Campaigns</string>
    <string name="Tel">Telephone</string>
    <string name="Fax">Fax Number</string>
    <string name="Email">Email</string>
    <string name="PostalAddress">Postal Address</string>
    <string name="UpdateContact">Update Contact</string>
    <string name="BookOrder">ORDER PARTS</string>
    <string name="SERVICES">LOADING SERVICES</string>
    <string name="REPAIRS">LOADING REPAIRS</string>
    <string name="ORDERS">LOADING ORDERS</string>
    <string name="PROMOTIONSS">LOADING PROMOTIONS</string>
    <string name="CAMPAIGNSS">LOADING CAMPAIGNS</string>
    <string name="Delete">MANAGE APP</string>
    <string name="POST2">POST AND REQUESTS</string>
    <string name="UPDATEPROMO">UPDATE PROMO</string>
    <string name="UPDATECAMP">UPDATE CAMP</string>
    <string name="DELETEPROMO">DELETE PROMO</string>
    <string name="DELETECAMP">DELETE CAMP</string>
    <string name="USERSERVICES">DELETE USER SERVICES</string>
    <string name="USERREPAIRS">DELETE USER REPAIRS</string>
    <string name="USERORDERSPARTS">DELETE ORDERS PARTS</string>
    <string name="PromoID">Enter Promo ID</string>
    <string name="CampID">Enter Camp ID</string>
    <string name="ServiceID">Enter Service ID</string>
    <string name="RepairID">Enter Repair ID</string>
    <string name="OrderID">Enter Order ID</string>
    <string name="YYMMDD">(YY-MM-DD)</string>


    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="buy">BUY</string>
</resources>
