<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button50"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:contentDescription="@string/ToyotaLogo"
        android:src="@drawable/toyota001"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/etSecretCode"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/request_button_text_style_bg"
        android:ems="10"
        android:gravity="left"
        android:padding="10dip"
        android:hint="@string/SecretCode"
        android:inputType="textPassword"
        android:maxLength="20"
        android:layout_above="@+id/btnView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="44dp" />

    <Button
        android:id="@+id/btnView"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/button5"
        android:text="@string/ViewPassword"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/btnBack"
        android:layout_alignLeft="@+id/etSecretCode"
        android:layout_alignStart="@+id/etSecretCode" />

    <Button
        android:id="@+id/btnBack"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/button5"
        android:text="@string/BACK"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnView"
        android:layout_alignStart="@+id/btnView" />

</RelativeLayout>
