<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button50"
    android:orientation="vertical" >


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Logo"
        android:src="@drawable/toyota001" />




    <Button
        android:id="@+id/btnDelete"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/button5"
        android:onClick="OnClick"
        android:text="@string/Delete"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/button5"
        android:onClick="OnClick"
        android:text="@string/LogOut"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/btnDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>